<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_font_size"
        android:title="Text Size"
        android:entries="@array/font_size_entries"
        android:entryValues="@array/font_size_values"
        android:defaultValue="18"/>
    <ListPreference
        android:key="@string/pref_font_style"
        android:title="Font Style"
        android:entries="@array/font_style_entries"
        android:entryValues="@array/font_style_values"
        android:defaultValue="Roboto-Regular.ttf"/>
    <ListPreference
        android:key="@string/pref_theme"
        android:title="Theme"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="Theme.Light"/>
</PreferenceScreen>